[TML-47] - Minor refactoring