@@ -2,6 +2,9 @@ package com.sava.teachernet.service;
 
 import com.sava.teachernet.model.User;
 import com.sava.teachernet.repository.UserRepository;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import org.springframework.security.oauth2.client.userinfo.DefaultOAuth2UserService;
 import org.springframework.security.oauth2.client.userinfo.OAuth2UserRequest;
 import org.springframework.security.oauth2.core.OAuth2AuthenticationException;
@@ -9,10 +12,6 @@ import org.springframework.security.oauth2.core.user.DefaultOAuth2User;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.Collections;
-import java.util.Map;
-import java.util.Optional;
 
 @Service
 @Transactional
@@ -47,8 +46,6 @@ public class CustomOAuth2UserService extends DefaultOAuth2UserService {
     }
 
     return new DefaultOAuth2User(
-        Collections.singletonList(() -> "ROLE_STUDENT"),
-        attributes,
-        "login");
+        List.of(() -> "ROLE_STUDENT"), attributes, "login");
   }
 }
